tests/ui/enum-discriminant/repr-c-big-discriminant2.ptr32.stderr
error[E0370]: enum discriminant overflowed
  --> $DIR/repr-c-big-discriminant2.rs:24:5
   |
LL |     B, // +1
   |     ^ overflowed on value after 2147483647
   |
   = note: explicitly set `B = -2147483648` if that is desired outcome

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0370`.
